--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+# Node modules
 node_modules/
+
+# Environment variables
 .env
+
+# Mac OS files
 .DS_Store
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Build output (si luego generás)
+dist/
